--- a/todor/templates/base.html
+++ b/todor/templates/base.html
@@ -19,10 +19,10 @@
             <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: right;" >
                 <ul class="navbar-nav">              
                     <li class="nav-item">
-                        <a class="navbar-brand" href="{{url_for('registrar')}}">Registrarse</a>
+                        <a class="navbar-brand" href="{{url_for('auth.register')}}">Registrarse</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand" href="{{url_for('index')}}">Iniciar sesion</a>
+                        <a class="navbar-brand" href="{{url_for('auth.login')}}">Iniciar sesion</a>
                     </li>              
                 </ul>
             </div>
