--- a/todor/templates/auth/login.html
+++ b/todor/templates/auth/login.html
@@ -1,7 +1,34 @@
 {% extends 'base.html' %}
-{% block title %} Iniciar sesion {% endblock %}
 
 {% block content %}
-    <h2> Login </h2>
+    <div class="container mt-">
+    <div class="row justify-content-center">
+            <div class="col-sm-8">
+                <br><br>
+                <div class="card">
+                    <div class="card-header">
+                        <h1 class="text-center"> {% block title %} Iniciar sesión {% endblock %} </h1>
+                    </div>
+                    <div class="card-body">
+                        <form action="" method="post">
+                            <div class="form-group">
+                                <label for='username'> Nombre de usuario </label>
+                                <input type="text" class="form-control" id="username" name="username" required>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <label for='password'> Contraseña </label>
+                                <input type="text" class="form-control" id="password" name="password" required>
+                            </div>
+                            <br>
+                            <div class="text-center">
+                                <input type="submit" class="btn btn-primary" value="Iniciar sesión">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+    </div>
+</div>
 
 {% endblock %}
