--- a/todor/templates/auth/registrar.html
+++ b/todor/templates/auth/registrar.html
@@ -1,7 +1,35 @@
 {% extends 'base.html' %}
-{% block title %} Registrar usuario {% endblock %}
 
 {% block content %}
-    <h2> Registrar usuarios </h2>
+
+<div class="container mt-">
+    <div class="row justify-content-center">
+            <div class="col-sm-8">
+                <br><br>
+                <div class="card">
+                    <div class="card-header">
+                        <h1 class="text-center"> {% block title %} Registrar usuario {% endblock %} </h1>
+                    </div>
+                    <div class="card-body">
+                        <form action="" method="post">
+                            <div class="form-group">
+                                <label for='username'> Nombre de usuario </label>
+                                <input type="text" class="form-control" id="username" name="username" required minlength="4" maxlength="20">
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <label for='password'> Contraseña </label>
+                                <input type="text" class="form-control" id="password" name="password" required minlength="8" maxlength="40">
+                            </div>
+                            <br>
+                            <div class="text-center">
+                                <input type="submit" class="btn btn-primary" value="Registrar usuario">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+    </div>
+</div>
 
 {% endblock %}
