registrando usuario e iniciando sesion

--- a/todor/templates/index.html
+++ b/todor/templates/index.html
@@ -11,8 +11,8 @@
     <p> Have an acount? </p>
 
     <div class="d-flx justify-content-center">
-        <a href="" class="btn btn-primary mx-2"> Iniciar sesion </a>
-        <a href="" class="btn btn-primary mx-2"> Registrarse    </a>
+        <a href="{{url_for('auth.login')}}" class="btn btn-primary mx-2"> Iniciar sesion </a>
+        <a href="{{url_for('auth.register')}}"    class="btn btn-primary mx-2"> Registrarse    </a>
 
     </div>
 
