--- a/todor/templates/auth/login.html
+++ b/todor/templates/auth/login.html
@@ -18,7 +18,7 @@
                             <br>
                             <div class="form-group">
                                 <label for='password'> Contraseña </label>
-                                <input type="text" class="form-control" id="password" name="password" required>
+                                <input type="password" class="form-control" id="password" name="password" required>
                             </div>
                             <br>
                             <div class="text-center">
