--- a/todor/templates/base.html
+++ b/todor/templates/base.html
@@ -16,14 +16,26 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav" style="justify-content: right;" >
-                <ul class="navbar-nav">              
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                {% if g.user %}
                     <li class="nav-item">
-                        <a class="navbar-brand" href="{{url_for('auth.register')}}">Registrarse</a>
+                        <span class="nav-link active"> {{ g.user.username }} </span>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar-brand" href="{{url_for('auth.login')}}">Iniciar sesion</a>
-                    </li>              
+                        <a class="nav-link" href="{{url_for('todo.index')}}"> Tareas </a>
+                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"> Cerrar sesion </a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('auth.register')}}"> Registrarse </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('auth.login')}}"> Iniciar sesion </a>
+                    </li>
+                {% endif %}
                 </ul>
             </div>
         </div>
@@ -31,6 +43,18 @@
       {% block content %}
 
       {% endblock %}
+
+      {% for message in get_flashed_messages() %}
+          <div class="container mt-3">
+              <div class="row">
+                  <div class="col-md mx-auto">
+                      <div class="alert alert-danger" role="alert">
+                          {{ message }}
+                      </div>
+                  </div>
+              </div>
+          </div>
+      {% endfor %}
 
     <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
